# loan-default-predict

./: .gitignore  README.md  data_dict.md  pyproject.toml  requirements.txt
src/: data-processing_visualisation.ipynb  model_results.txt  models_def.py  preprocessing_model-fitting.ipynb
